--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,21 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application.scss", extname: false, "data-turbo-track": "reload" %>
+    <%= yield :stylesheets %>
+
     <%= javascript_importmap_tags %>
+
+    <%= render "layouts/shim"%>
   </head>
 
   <body>
-    <%= yield %>
+    <div data-controller="adjust-navbar-padding">
+      <%= render "layouts/header" %>
+      <div class="main-content" id="main-content" data-adjust-navbar-padding-target="content">
+        <%= yield %>
+      </div>
+      <%= render "layouts/footer" %>
+    </div>
   </body>
 </html>
