--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,12 +1,14 @@
 <% provide(:title, "About") %>
 
-<h1>About</h1>
-<p>
-    The <a href="https://www.railstutorial.org/"><em>Ruby on Rails Tutorial</em></a>, part of the
-    <a href="https://www.learnenough.com/">Learn Enough</a> family of tutorials, is a
-    <a href="https://www.railstutorial.org/book">book</a> and
-    <a href="https://screencasts.railstutorial.org/">screencast series</a>
-    to teach web development with
-    <a href="https://rubyonrails.org/">Ruby on Rails</a>.
-    This is the sample app for the tutorial.
-</p>
+<div class="content-container center center--column">
+    <h1>About</h1>
+    <p>
+        The <a href="https://www.railstutorial.org/" class="content__link"><em>Ruby on Rails Tutorial</em></a>, part of the
+        <a href="https://www.learnenough.com/" class="content__link">Learn Enough</a> family of tutorials, is a
+        <a href="https://www.railstutorial.org/book" class="content__link">book</a> and
+        <a href="https://screencasts.railstutorial.org/" class="content__link">screencast series</a>
+        to teach web development with
+        <a href="https://rubyonrails.org/" class="content__link">Ruby on Rails</a>.
+        This is the sample app for the tutorial.
+    </p>
+</div>
