--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,23 @@
 <%= provide(:title, "Sign up") %>
-<h1>Sign up</h1>
-<p>This will be a signup page for new users.</p>
+<div class="content-container center center--column">
+  <h1>Sign up</h1>
+  <div class="row">
+    <div class="form-container">
+      <%= form_with(model: @user, local: true) do |f| %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+
+        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.password_field :password_confirmation %>
+
+        <%= f.submit "Create my account", class: "btn" %>
+      <% end %>
+    </div>
+  </div>
+</div>
