--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <nav>
       <ul class="navbar__nav">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "Help", help_static_pages_path %></li>
         <li><%= link_to "Log in", signup_path %></li>
       </ul>
     </nav>
