Feat(login): add sessions controller and login

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -251,6 +251,12 @@ h2 {
   border: 1px solid transparent;
 }
 
+.alert {
+  padding: 16px 32px;
+  border-radius: 8px;
+  margin-top: 16px;
+}
+
 .alert-success {
   color: #155724;
   background-color: #d4edda;
