--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -331,6 +331,24 @@ h2 {
       padding: 8px 16px;
       border-radius: 4px;
     }
+
+    .form-checkbox {
+      display: flex;
+      margin-top: -10px;
+      margin-bottom: 10px;
+      padding-left: 24px;
+
+      input {
+        padding: 0;
+        margin: 0;
+        width: auto;
+      }
+
+      span {
+        margin-left: 20px;
+        font-weight: normal;
+      }
+    }
   }
 }
 
