--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag "application.scss", extname: false, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= yield :stylesheets %>
 
     <%= javascript_importmap_tags %>
@@ -30,9 +30,13 @@
     <div data-controller="adjust-navbar-padding">
       <%= render "layouts/header" %>
       <div class="main-content" id="main-content" data-adjust-navbar-padding-target="content">
+        <% flash.each do |message_type, message|%>
+          <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+        <% end %>
         <%= yield %>
       </div>
       <%= render "layouts/footer" %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
