--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,25 @@
 <%= provide(:title, "Sign up") %>
 <div class="content-container center center--column">
   <h1>Sign up</h1>
-  <p>This will be a signup page for new users.</p>
+  <div class="row">
+    <div class="form-container">
+      <%= form_with(model: @user, data: { turbo: false }) do |f| %>
+        <%= render "shared/error_messages" %>
+
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+
+        <%= f.label :email %>
+        <%= f.email_field :email %>
+
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+
+        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.password_field :password_confirmation %>
+
+        <%= f.submit "Create my account", class: "btn" %>
+      <% end %>
+    </div>
+  </div>
 </div>
