--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       </button>
       <ul class="navbar__nav hidden main-dropdown-menu" data-menu-hamburger-target="menu">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "Help", help_static_pages_path %></li>
         <% if logged_in? %>
           <li><%= link_to "Users", '#' %></li>
           <li data-controller="dropdown" class="relative dropdown">
@@ -18,7 +18,7 @@
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", '#' %></li>
               <li class="divider"></li>
-              <li><%= link_to "Log out", logout_path %></li>
+              <li><%= link_to "Log out", logout_path, method: :delete %></li>
             </ul>
           </li>
         <% else %>
