--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,10 +58,128 @@ a {
   align-items: center;
 }
 
+nav {
+  position: relative;
+}
+
+.hamburger-btn {
+  background: none;
+  font-size: 14px;
+  margin: 4px;
+  cursor: pointer;
+  color: inherit;
+  border-radius: 4px;
+  border: 2px solid #ddd;
+  padding: 4px;
+}
+
 .navbar__nav {
-  display: flex;
-  gap: 32px;
   list-style: none;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.main-dropdown-menu {
+  position: absolute;
+  right: 0;
+  margin-top: 0.5rem;
+  background-color: inherit;
+  color: inherit;
+  flex-direction: column;
+  background-color: #222;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+
+  li {
+    width: 150px;
+    padding: 8px;
+
+    a {
+      display: block;
+      width: 100%;
+    }
+
+    button {
+      display: block;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .hamburger-btn {
+    display: none;
+  }
+
+  .navbar__nav {
+    display: flex !important;
+    flex-direction: row;
+    gap: 32px;
+  }
+}
+
+.dropdown {
+  position: relative;
+
+  button {
+    color: inherit;
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+
+    .caret {
+      display: inline-block;
+      width: 0;
+      height: 0;
+      margin-left: 4px;
+      vertical-align: middle;
+      border-top: 4px dashed;
+      border-right: 4px solid transparent;
+      border-left: 4px solid transparent;
+    }
+  }
+
+  .dropdown-menu {
+    display: none;
+    position: absolute;
+    right: 0;
+    margin-top: 0.5rem;
+    width: 12rem;
+    border: 1px solid #ddd;
+    background-color: #222222;
+    border-radius: 4px;
+    box-shadow: 0 0 5px 5px rgba($color: #000000, $alpha: 0.1);
+    z-index: 100;
+    list-style: none;
+
+    li {
+      width: 100%;
+      padding: 8px;
+    }
+
+    li a {
+      width: 100%;
+      display: block;
+    }
+
+    li.divider {
+      padding: 0;
+      height: 1px;
+      background-color: #ddd;
+    }
+  }
+
+  .dropdown-menu.show {
+    display: block;
+  }
 }
 
 .main-content {
@@ -249,6 +367,12 @@ h2 {
   font-size: 16px;
   font-weight: 500;
   border: 1px solid transparent;
+}
+
+.alert {
+  padding: 16px 32px;
+  border-radius: 8px;
+  margin-top: 16px;
 }
 
 .alert-success {
