--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,8 +1,12 @@
-<li id="micropost-<%= micropost.id %>">
-    <%= link_to gravatar_for(micropost.user, 50), micropost.user %>
-    <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
-    <span class="content"><%= micropost.content %></span>
-    <span class="timestamp">
-        Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-    </span>
+<li id="micropost-<%= micropost.id %>" class="micropost">
+    <%= link_to gravatar_for(micropost.user, 50), micropost.user, class: "micropost-avatar" %>
+    <div class="content-micropost-container">
+        <div class="content-micropost__header">
+            <div class="user"><%= link_to micropost.user.name, micropost.user %></div>
+            <div class="timestamp">
+                Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+            </div>
+        </div>
+        <span class="content"><%= micropost.content %></span>
+    </div>
 </li>
