--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="form-container">
       <%= form_with(model: @user, url: password_reset_path(params[:id]), data: { turbo: false }) do |f| %>
-        <%= render "shared/error_messages" %>
+        <%= render "shared/error_messages", object: @user %>
 
         <%= hidden_field_tag :email, @user.email %>
 
