Feat: image processing

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar" id="navbar" data-adjust-navbar-padding-target="navbar">
+<header class="navbar" id="navbar" data-adjust-navbar-padding-target="navbar" data-stick-left-target="header" >
   <div class="navbar__container">
     <%= link_to "sample app", root_path, id: "logo" %>
     <nav data-controller="menu-hamburger">
