--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <div data-controller="adjust-navbar-padding">
+    <div data-controller="adjust-navbar-padding sticky-left">
       <%= render "layouts/header" %>
       <div class="main-content" id="main-content" data-adjust-navbar-padding-target="content">
         <% flash.each do |message_type, message|%>
