--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -319,7 +319,10 @@ h2 {
     flex-direction: column;
     font-size: 24px;
 
-    input, textarea, select, .uneditable-input {
+    input,
+    textarea,
+    select,
+    .uneditable-input {
       border: 1px solid #bbb;
       font-size: inherit;
       width: 100%;
@@ -437,7 +440,9 @@ h2 {
   margin-top: 20px;
 }
 
-.pagination a, .pagination span, .pagination em {
+.pagination a,
+.pagination span,
+.pagination em {
   margin: 0 5px;
   padding: 8px 12px;
   text-decoration: none;
@@ -457,7 +462,7 @@ h2 {
 }
 
 .user-link {
-  color:rgb(58, 143, 223);
+  color: rgb(58, 143, 223);
 }
 
 .user-info__link {
@@ -475,7 +480,7 @@ h2 {
   justify-content: space-between;
 
   .forgot-password-link {
-    color:rgb(58, 143, 223);
+    color: rgb(58, 143, 223);
     cursor: pointer;
     display: inline-block;
 
@@ -607,5 +612,72 @@ h2 {
 
   .right {
     margin-left: 0;
+  }
+}
+
+.user-body {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#follow_form {
+  margin-bottom: 12px;
+}
+
+.stats {
+  overflow: auto;
+  margin-top: 0;
+  margin-bottom: 12px;
+  padding: 0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid #666;
+    color: gray;
+
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+
+    &:hover {
+      text-decoration: none;
+      color: blue;
+    }
+  }
+
+  strong {
+    display: block;
+  }
+}
+
+.follow-container {
+  display: flex;
+
+  .left {
+    width: 300px;
+
+    .user_avatars {
+      display: flex;
+      flex-wrap: wrap;
+
+      .gravatar {
+        width: 30px;
+        height: 30px;
+        margin: 5px;
+      }
+    }
+  }
+
+  .right {
+    flex: 1;
   }
 }
