--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,9 @@
             <div class="">
                 <%= render 'shared/user_info' %>
             </div>
+            <div class="stats">
+                <%= render 'shared/stats' %>
+            </div>
             <div>
                 <%= render 'shared/micropost_form' %>
             </div>
