--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -12,14 +12,15 @@
 <script type="text/javascript">
     document.addEventListener("DOMContentLoaded", function () {
         const fileInput = document.getElementById("micropost_image");
+        const MAX_FILE_SIZE_MB = <%= Micropost::MAXIMUM_IMAGE_SIZE %>;
 
         fileInput.addEventListener("change", function () {
             const file = fileInput.files[0];
             const sizeInMB = file.size / 1024 / 1024;
 
-            if (sizeInMB > 5) {
-            alert("Maximum file size is 5MB. Please choose a smaller file.");
-            fileInput.value = ""; // reset input
+            if (sizeInMB > MAX_FILE_SIZE_MB) {
+                alert(`Maximum file size is ${MAX_FILE_SIZE_MB}MB. Please choose a smaller file.`);
+                fileInput.value = ""; // reset input
             }
         });
     });
